# advent-of-code

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
2025/: 2025.code-workspace  CMakeLists.txt  CMakePresets.json
2025/common/: FileUtils.cpp  FileUtils.h
2025/day1/: CMakeLists.txt  Command.cpp  Command.h  FileUtils.cpp  FileUtils.h  README.md  Safe.cpp  Safe.h  main.cpp
2025/day2/: ProductIdValidator.cpp  ProductIdValidator.h  README.md  Range.cpp  Range.h  main.cpp
